methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:2: error: Missing closing brace `}' assumed here
def move(nbPas: Int,versLAvant: Boolean):Unit = {
^MethodsArgs:2: error: expected class or object definition
def move(nbPas: Int,versLAvant: Boolean):Unit = {
^